[package]
name = "interpolator"
version = "0.1.0"
edition = "2021"
categories = ["template-engine", "value-formatting", "text-processing"]
description = "runtime format strings, fully compatible with std's macros"
keywords = ["text", "interpolation", "format"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/template"
documentation = "https://docs.rs/template"

[features]
# default = ["debug", "number", "pointer"]
debug = []
number = []
pointer = []

[dev-dependencies]
derive_more = "0.99.17"
proptest = "1.1.0"
proptest-derive = "0.3.0"
quote = "1.0.23"
trybuild2 = "1.0.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
