[package]
name = "interpolator"
version = "0.5.0"
edition = "2021"
categories = ["template-engine", "value-formatting", "text-processing"]
description = "runtime format strings, fully compatible with std's macros"
keywords = ["text", "interpolation", "format"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ModProg/interpolator"
documentation = "https://docs.rs/interpolator"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[features]
# default = ["debug", "number", "pointer", "iter"]
debug = []
number = []
pointer = []
iter = []

[dev-dependencies]
assert-dbg = { path = "assert-dbg" }
collection_literals = "1.0.1"
derive_more = "0.99.17"
proptest = "1.1.0"
proptest-derive = "0.3.0"
quote = "1.0.23"
trybuild2 = "1.0.0"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '## \[Unreleased\]'
replace = """
<!-- ## [Unreleased] -->
## [{{version}}] - {{date}}\
"""
[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = '\[unreleased\]: (.*)/(v.*)\.\.\.HEAD'
replace = """
[unreleased]: $1/{{tag_name}}...HEAD
[{{version}}]: $1/$2...{{tag_name}}\
"""
